# bogles-eye

./: AGENTS.md  LICENSE  README.md
docs/tasks/: 01-scraper.md  02-web-ui.md  03-nasdaq-support.md
scraper/: pyproject.toml
scraper/bogle_scraper/: main.py
scraper/data/: fund_fees_2025-12-19.csv
web/: README.md  index.html  package-lock.json  package.json
web/public/data/: fund_fees_2025-12-19.csv
web/src/: App.tsx
web/src/components/: FundTable.tsx  Header.tsx
web/src/types/: fund.ts
