[tool.poetry]
package-mode = false

[project]
name = "bogle-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "Jesse Ha",email = "kwangswei@gmail.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "playwright (>=1.57.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
